# datafusion-variant

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: test.yml
examples/: cli.rs  profile_json_to_variant.rs
src/: cast_to_variant.rs  expr_planner.rs  extension_type.rs  impl_variant_get.rs  is_variant_null.rs  json_to_variant.rs  lib.rs  shared.rs  variant_get.rs  variant_get_bool.rs  variant_get_float.rs  variant_get_int.rs  variant_get_str.rs  variant_list_construct.rs  variant_list_delete.rs  variant_list_insert.rs  variant_normalize.rs  variant_object_construct.rs  variant_object_delete.rs  variant_object_insert.rs  variant_object_keys.rs  variant_pretty.rs  variant_schema.rs  variant_schema_agg.rs  variant_to_json.rs
test_files/: json_to_variant.slt  variant_get.slt  variant_object_construct.slt
tests/: sqllogictests.rs
tests/test_files/: cast_to_variant.slt  colon_operator.slt  variant_get.slt  variant_get_bool.slt  variant_get_field.slt  variant_get_float.slt  variant_get_int.slt  variant_get_json.slt  variant_get_str.slt  variant_list_construct.slt  variant_list_delete.slt  variant_list_insert.slt  variant_object_delete.slt  variant_object_insert.slt  variant_object_keys.slt  variant_pretty.slt  variant_schema.slt  variant_schema_agg.slt
