[package]
name = "datafusion-variant"
description = "Variant functions for DataFusion"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Matthew Kim <matthew@pydantic.dev>"]

[dependencies]
datafusion = "52.1.0"
arrow = "57"
arrow-schema = "57"
parquet-variant-compute = "57"
parquet-variant-json = "57"
parquet-variant = "57"

[dev-dependencies]
anyhow = "1.0.100"
arrow-cast = "57"
serde_json = "1.0.145"
flate2 = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
datafusion-sqllogictest = "52.1.0"
sqllogictest = "0.28"
indicatif = "0.18"
env_logger = "0.11"
insta = "1.43.2"
rustyline = { version = "14.0", features = ["derive"] }
