[package]
name = "datafusion-variant"
description = "Variant functions for DataFusion"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Matthew Kim <matthew@pydantic.dev>"]

[dependencies]
datafusion = "52.2"
arrow = "58.0"
arrow-schema = "58.0"
parquet-variant-compute = "58.0"
parquet-variant-json = "58.0"
parquet-variant = "58.0"

[dev-dependencies]
anyhow = "1.0.100"
arrow-cast = "58.0"
serde_json = "1.0.145"
flate2 = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
datafusion-sqllogictest = "52.2"
sqllogictest = "0.29"
indicatif = "0.18"
env_logger = "0.11"
insta = "1.43.2"
rustyline = { version = "14.0", features = ["derive"] }
